@@ -1064,19 +1064,41 @@ expr_stmt|;
 name|byte
 index|[]
 name|splitPackedValues
-init|=
+decl_stmt|;
+name|int
+name|bytesPerIndexEntry
+decl_stmt|;
+if|if
+condition|(
+name|numDims
+operator|==
+literal|1
+condition|)
+block|{
+name|bytesPerIndexEntry
+operator|=
+name|bytesPerDim
+expr_stmt|;
+block|}
+else|else
+block|{
+name|bytesPerIndexEntry
+operator|=
+literal|1
+operator|+
+name|bytesPerDim
+expr_stmt|;
+block|}
+name|splitPackedValues
+operator|=
 operator|new
 name|byte
 index|[
 name|count
 operator|*
-operator|(
-literal|1
-operator|+
-name|bytesPerDim
-operator|)
+name|bytesPerIndexEntry
 index|]
-decl_stmt|;
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -1097,25 +1119,40 @@ argument_list|(
 name|dataIn
 argument_list|)
 expr_stmt|;
-name|splitPackedValues
-index|[
-operator|(
-literal|1
-operator|+
-name|bytesPerDim
-operator|)
+name|int
+name|address
+init|=
+name|bytesPerIndexEntry
 operator|*
 name|i
+decl_stmt|;
+name|int
+name|splitDim
+init|=
+name|parseInt
+argument_list|(
+name|SPLIT_DIM
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|numDims
+operator|!=
+literal|1
+condition|)
+block|{
+name|splitPackedValues
+index|[
+name|address
+operator|++
 index|]
 operator|=
 operator|(
 name|byte
 operator|)
-name|parseInt
-argument_list|(
-name|SPLIT_DIM
-argument_list|)
+name|splitDim
 expr_stmt|;
+block|}
 name|readLine
 argument_list|(
 name|dataIn
@@ -1161,15 +1198,7 @@ name|offset
 argument_list|,
 name|splitPackedValues
 argument_list|,
-operator|(
-literal|1
-operator|+
-name|bytesPerDim
-operator|)
-operator|*
-name|i
-operator|+
-literal|1
+name|address
 argument_list|,
 name|bytesPerDim
 argument_list|)
