@@ -132,6 +132,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|RamUsageEstimator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|StringHelper
 import|;
 end_import
@@ -179,6 +193,11 @@ DECL|field|bytesPerDim
 specifier|final
 name|int
 name|bytesPerDim
+decl_stmt|;
+DECL|field|bytesPerIndexEntry
+specifier|final
+name|int
+name|bytesPerIndexEntry
 decl_stmt|;
 DECL|field|in
 specifier|final
@@ -276,6 +295,24 @@ operator|.
 name|readVInt
 argument_list|()
 expr_stmt|;
+name|bytesPerIndexEntry
+operator|=
+name|numDims
+operator|==
+literal|1
+operator|&&
+name|version
+operator|>=
+name|BKDWriter
+operator|.
+name|VERSION_IMPLICIT_SPLIT_DIM_1D
+condition|?
+name|bytesPerDim
+else|:
+name|bytesPerDim
+operator|+
+literal|1
+expr_stmt|;
 name|packedBytesLength
 operator|=
 name|numDims
@@ -357,11 +394,7 @@ operator|=
 operator|new
 name|byte
 index|[
-operator|(
-literal|1
-operator|+
-name|bytesPerDim
-operator|)
+name|bytesPerIndexEntry
 operator|*
 name|numLeaves
 index|]
@@ -639,6 +672,18 @@ operator|.
 name|bytesPerDim
 operator|=
 name|bytesPerDim
+expr_stmt|;
+name|bytesPerIndexEntry
+operator|=
+name|numDims
+operator|==
+literal|1
+condition|?
+name|bytesPerDim
+else|:
+name|bytesPerDim
+operator|+
+literal|1
 expr_stmt|;
 name|packedBytesLength
 operator|=
@@ -1310,18 +1355,21 @@ name|address
 init|=
 name|nodeID
 operator|*
-operator|(
-name|bytesPerDim
-operator|+
-literal|1
-operator|)
+name|bytesPerIndexEntry
 decl_stmt|;
 name|int
 name|splitDim
 init|=
+name|numDims
+operator|==
+literal|1
+condition|?
+literal|0
+else|:
 name|splitPackedValues
 index|[
 name|address
+operator|++
 index|]
 operator|&
 literal|0xff
@@ -1364,8 +1412,6 @@ argument_list|(
 name|splitPackedValues
 argument_list|,
 name|address
-operator|+
-literal|1
 argument_list|,
 name|splitPackedValue
 argument_list|,
@@ -1412,8 +1458,6 @@ argument_list|(
 name|splitPackedValues
 argument_list|,
 name|address
-operator|+
-literal|1
 argument_list|,
 name|splitPackedValue
 argument_list|,
@@ -2557,18 +2601,21 @@ name|address
 init|=
 name|nodeID
 operator|*
-operator|(
-name|bytesPerDim
-operator|+
-literal|1
-operator|)
+name|bytesPerIndexEntry
 decl_stmt|;
 name|int
 name|splitDim
 init|=
+name|numDims
+operator|==
+literal|1
+condition|?
+literal|0
+else|:
 name|splitPackedValues
 index|[
 name|address
+operator|++
 index|]
 operator|&
 literal|0xff
@@ -2613,8 +2660,6 @@ argument_list|(
 name|splitPackedValues
 argument_list|,
 name|address
-operator|+
-literal|1
 argument_list|,
 name|splitPackedValue
 argument_list|,
@@ -2661,8 +2706,6 @@ argument_list|(
 name|splitPackedValues
 argument_list|,
 name|address
-operator|+
-literal|1
 argument_list|,
 name|splitPackedValue
 argument_list|,
@@ -2709,18 +2752,21 @@ name|address
 init|=
 name|nodeID
 operator|*
-operator|(
-name|bytesPerDim
-operator|+
-literal|1
-operator|)
+name|bytesPerIndexEntry
 decl_stmt|;
 name|int
 name|splitDim
 init|=
+name|numDims
+operator|==
+literal|1
+condition|?
+literal|0
+else|:
 name|splitPackedValues
 index|[
 name|address
+operator|++
 index|]
 operator|&
 literal|0xff
@@ -2737,8 +2783,6 @@ argument_list|(
 name|splitPackedValues
 argument_list|,
 name|address
-operator|+
-literal|1
 argument_list|,
 name|splitPackedValue
 argument_list|,
@@ -2759,17 +2803,19 @@ name|ramBytesUsed
 parameter_list|()
 block|{
 return|return
+name|RamUsageEstimator
+operator|.
+name|sizeOf
+argument_list|(
 name|splitPackedValues
-operator|.
-name|length
+argument_list|)
 operator|+
+name|RamUsageEstimator
+operator|.
+name|sizeOf
+argument_list|(
 name|leafBlockFPs
-operator|.
-name|length
-operator|*
-name|Long
-operator|.
-name|BYTES
+argument_list|)
 return|;
 block|}
 annotation|@
